--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.0.0",
-    "ipfs-api": "^22.3.0"
+    "ipfs-api": "^22.3.0",
+    "winston": "^3.0.0"
   }
 }
